# clipper

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  ClipperBaseDockerfile  GRPCFrontendDockerfile  ManagementFrontendDockerfile  QueryFrontendDockerfile  RPCDockerfile  TestSMDockerfile  ZmqFrontendDockerfile  configure  install_clipper_deps.sh
clipper_admin/: clipper_manager.py  clipper_manager_v2.py  container_manager.py  setup.py
clipper_admin/clipper_admin/: __init__.py  clipper_admin.py  container_manager.py
clipper_admin/clipper_admin/aws/: aws_container_manager.py
clipper_admin/clipper_admin/deployers/: cloudpickle.py
clipper_admin/clipper_admin/docker/: docker_container_manager.py
clipper_admin/clipper_admin/gcp/: gcp_container_manager.py
clipper_admin/deployers/: pyspark.py  python.py
clipper_admin/docker/: docker_container_manager.py
clipper_admin/k8s/: k8s_container_manager.py
clipper_admin_v2/: clipper_admin.py  container_manager.py  setup.py
clipper_admin_v2/clipper_admin/: __init__.py  clipper_admin.py  container_manager.py
clipper_admin_v2/deployers/: tensorflow.py
clipper_admin_v2/docker/: docker_container_manager.py
clipper_admin_v2/k8s/: k8s_container_manager.py
clipper_ai/: config.toml
clipper_ai/content/: contributing.md  roadmap.md
clipper_dag/: basic_example.py  run_pipeline.sh  start_object_store.sh  t1.py  t2.py  t3.py  transformer.py
containers/: container_implementation.md
containers/python/: PythonContainerDockerfile  noop_container.py  rpc.py  sagemaker_sklearn_container.py
containers/scala/: pom.xml
dockerfiles/: ClipperDevDockerfile  ClipperTestsDockerfile  SagemakerSklearnContainerDockerfile
examples/basic_query/: example_client.py
examples/gpu_containers/: Dockerfile  build_docker_image.sh
grpc_client_py/: clipper_grpc_client.py  grpc_benchmark.py
integration-tests/: clipper_admin_tests.py  deploy_pyspark_models.py  deploy_pyspark_pipeline_models.py  many_apps_many_models.py  test_utils.py
management/: clipper_manager.py
model-composition/: ObjectStoreDockerfile  redis.conf  run_pipeline.sh  start_object_store.sh  transformer.py
model_composition/container_utils/: CudaPyRpcDockerfile  RpcDockerfile  Tf1-4RpcDockerfile  TfRpcDockerfile  TfRpcNoGpuDockerfile  rpc.py
model_composition/containerized_utils/: setup.py
model_composition/cpp_benchmarker/: aws_cpp_profiler.py  aws_image_driver_one.py  aws_resnet_cascade.py  aws_text_driver_one.py  debug_configs_HIGH_LAMBDA.json  debug_configs_LOW_LAMBDA.json  gcp_cpp_profiler.py  predictor.cpp  predictor.hpp  profiler.cpp  zmq_client.cpp  zmq_client.hpp
model_composition/single_proc_utils/: setup.py
model_composition/tfserving_image_driver/: driver.py
model_composition/tfserving_utils/: inception_client.py
src/: CMakeLists.txt
src/dag/: CMakeLists.txt
src/inferline_client/: CMakeLists.txt
src/inferline_client/src/: client_metrics.hpp  contention_driver.cpp  driver.cpp  driver.hpp  image_driver_one.cpp  image_driver_two.cpp  inputs.hpp  predictor.cpp  predictor.hpp  profiler.cpp  resnet_cascade.cpp  text_driver_one.cpp  zmq_client.cpp  zmq_client.hpp
src/libclipper/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/rpc_frontend/: CMakeLists.txt
src/zmq_frontend/: CMakeLists.txt
zmq_client_py/: clipper_zmq_client.py  test.py  zmq_benchmark.py
(+340 files in other folders)
